<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/course"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/course" />

        <TextView
            android:id="@+id/bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/book_name" />

        <EditText
            android:id="@+id/editBookUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/author" />

        <EditText
            android:id="@+id/editAuthorUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtIsbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/isbn" />

        <EditText
            android:id="@+id/editISBNUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnUpdateBook"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:background="#039BE5"
            android:text="@string/update_book"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnDeleteBook"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:background="#E53935"
            android:text="@string/delete_book"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/radioGroupCoursesUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1">

            <RadioButton
                android:id="@+id/radioButtonUnixUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unix" />

            <RadioButton
                android:id="@+id/radioButtonCUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cplus" />

            <RadioButton
                android:id="@+id/radioButtonJavaUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java" />

            <RadioButton
                android:id="@+id/radioButtonHistoryUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history" />

            <RadioButton
                android:id="@+id/radioButtonEconomicsUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/economics" />

            <RadioButton
                android:id="@+id/radioButtonEnglishUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/radioButtonRamUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RAM" />

            <RadioButton
                android:id="@+id/radioButtonScienceUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/science" />

            <RadioButton
                android:id="@+id/radioButtonMovieUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <RadioButton
                android:id="@+id/radioButtonMathUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/math" />

        </RadioGroup>

        <Switch
            android:id="@+id/switchAvailabilityUpdate"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/availability" />

    </GridLayout>
</ScrollView>

