<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        tools:context=".RegistrationActivity">


        <TextView
            android:id="@+id/capacity"
            android:layout_gravity="start"
            style="@style/TextViews"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/capacity"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"/>

        <SeekBar
            android:id="@+id/seekBarCapacity"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:max="30"
            android:progress="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>

        <Switch
            android:id="@+id/switchComputer"
            style="@style/Switches"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:text="@string/computer"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <Switch
            android:id="@+id/switchWifi"
            style="@style/Switches"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/wifi"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <Switch
            android:id="@+id/switchEngineering"
            style="@style/Switches"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/engineering"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViews"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/building"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <RadioGroup
            android:id="@+id/radioGroupBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/radioButtonNurigan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nurigan"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/radioButtonHyangpagan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hyangpagan" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextRoomNumber"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnAddRoom"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_room"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/roomnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViews"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/room_number"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>


    </GridLayout>
</ScrollView>